--- a/device-postgresql13-el9/src/main/resources/usr/lib/systemd/system/postgresql-autodiscovery.service
+++ b/device-postgresql13-el9/src/main/resources/usr/lib/systemd/system/postgresql-autodiscovery.service
@@ -10,8 +10,9 @@ After=firewalld.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash /usr/libexec/device/device-postgresql-autodiscovery
-ExecReload=/bin/bash /usr/libexec/device/device-postgresql-autodiscovery
+Environment=PGDATA=/var/lib/pgsql/data
+ExecStart=/bin/bash /usr/libexec/device-postgresql-autodiscovery
+ExecReload=/bin/bash /usr/libexec/device-postgresql-autodiscovery
 RemainAfterExit=on
 
 [Install]
