--- a/device-postgresql13-el9/pom.xml
+++ b/device-postgresql13-el9/pom.xml
@@ -93,6 +93,10 @@
                   <location>target/classes/usr/libexec/device-postgresql-autodiscovery</location>
                   <destination>device-postgresql-autodiscovery</destination>
                 </source>
+                <source>
+                  <location>target/classes/usr/libexec/device-postgresql-postdiscovery</location>
+                  <destination>device-postgresql-postdiscovery</destination>
+                </source>
               </sources>
             </mapping>
             <mapping>
@@ -105,6 +109,10 @@
                 <source>
                   <location>target/classes/usr/lib/systemd/system/postgresql-autodiscovery.service</location>
                   <destination>postgresql-autodiscovery.service</destination>
+                </source>
+                <source>
+                  <location>target/classes/usr/lib/systemd/system/postgresql-postdiscovery.service</location>
+                  <destination>postgresql-postdiscovery.service</destination>
                 </source>
               </sources>
             </mapping>
