--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </scm>
 
   <modules>
-    <module>device-postgresql13-el9</module>
+    <module>device-postgresql-el9</module>
   </modules>
 
   <build>
