--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <artifactId>device-postgresql</artifactId>
   <groupId>zone.device.platform</groupId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
   <packaging>pom</packaging>
   <name>device postgresql package</name>
   <description>Packaging for the Postgresql appliance</description>
@@ -20,9 +20,9 @@
   </organization>
 
   <scm>
-    <connection>scm:svn:https://github.com/device-zone/device-postgresql/trunk</connection>
-    <developerConnection>scm:svn:https://github.com/device-zone/device-postgresql/trunk</developerConnection>
-    <url>https://github.com/device-zone/device-postgresql/trunk</url>
+    <connection>scm:svn:https://github.com/device-zone/device-postgresql/tags/device-postgresql-1.0.2</connection>
+    <developerConnection>scm:svn:https://github.com/device-zone/device-postgresql/tags/device-postgresql-1.0.2</developerConnection>
+    <url>https://github.com/device-zone/device-postgresql/tags/device-postgresql-1.0.2</url>
   </scm>
 
   <modules>
