--- a/device-postgresql-el9/pom.xml
+++ b/device-postgresql-el9/pom.xml
@@ -175,6 +175,9 @@
                 <source>
                   <location>target/classes/usr/libexec/device/services/db/postgresql/instance/set</location>
                 </source>
+                <source>
+                  <location>target/classes/usr/libexec/device/services/db/postgresql/instance/show</location>
+                </source>
               </sources>
             </mapping>
             <mapping>
@@ -206,6 +209,9 @@
                 </source>
                 <source>
                   <location>target/classes/usr/libexec/device/services/db/postgresql/database/set</location>
+                </source>
+                <source>
+                  <location>target/classes/usr/libexec/device/services/db/postgresql/database/show</location>
                 </source>
               </sources>
             </mapping>
