Make sure postdiscovery runs after autodiscovery.

--- a/device-postgresql-el9/src/main/resources/usr/lib/systemd/system/postgresql-postdiscovery.service
+++ b/device-postgresql-el9/src/main/resources/usr/lib/systemd/system/postgresql-postdiscovery.service
@@ -5,7 +5,7 @@ Description=Postgresql Configuration Postdiscovery
 #Requires=postgresql.target
 PartOf=postgresql.target
 ReloadPropagatedFrom=postgresql.service
-After=postgresql@.service
+After=postgresql-autodiscovery.service
 After=firewalld.service
 
 [Service]
