--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
   <modules>
     <module>device-postgresql-el9</module>
     <module>device-postgresql-backup-el9</module>
+    <module>device-postgresql-tls-el9</module>
   </modules>
 
   <build>
