--- a/device-postgresql-el9/src/main/resources/usr/lib/systemd/system/postgresql-postdiscovery.service
+++ b/device-postgresql-el9/src/main/resources/usr/lib/systemd/system/postgresql-postdiscovery.service
@@ -11,8 +11,8 @@ After=firewalld.service
 [Service]
 Type=oneshot
 Environment=PGDATA=/var/lib/pgsql/data
-ExecStart=/bin/bash /usr/libexec/device-postdiscovery/postgresql
-ExecReload=/bin/bash /usr/libexec/device-postdiscovery/postgresql
+ExecStart=/bin/bash /usr/libexec/device-postdiscovery/postgresql start
+ExecReload=/bin/bash /usr/libexec/device-postdiscovery/postgresql reload
 RemainAfterExit=on
 
 [Install]
