--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>device-postgresql-el9</module>
     <module>device-postgresql-backup-el9</module>
     <module>device-postgresql-tls-el9</module>
+    <module>device-postgresql-replication-el9</module>
   </modules>
 
   <build>
