--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
   </organization>
 
   <scm>
-    <connection>scm:svn:https://github.com/device-zone/device-postgresql/trunk</connection>
-    <developerConnection>scm:svn:https://github.com/device-zone/device-postgresql/trunk</developerConnection>
-    <url>https://github.com/device-zone/device-postgresql/trunk</url>
+    <connection>scm:git:https://github.com/device-zone/device-postgresql.git</connection>
+    <developerConnection>scm:git:https://github.com/device-zone/device-postgresql.git</developerConnection>
+    <url>https://github.com/device-zone/device-postgresql/</url>
   </scm>
 
   <modules>
